# backend/src/shared/infrastructure/spec/swagger.json
@@ -61,6 +61,9 @@
 					},
 					"400": {
 						"description": "Bad Request"
+					},
+					"422": {
+						"description": "Validation Error"
 					}
 				},
 				"tags": [
@@ -124,6 +127,9 @@
 					},
 					"404": {
 						"description": "Not found"
+					},
+					"422": {
+						"description": "Validation Error"
 					}
 				},
 				"tags": [
@@ -177,12 +183,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"allOf": [
-										{
-											"$ref": "#/components/schemas/MeetupModel"
-										}
-									],
-									"nullable": true
+									"$ref": "#/components/schemas/MeetupModel"
 								}
 							}
 						}
@@ -192,6 +193,9 @@
 					},
 					"404": {
 						"description": "Not found"
+					},
+					"422": {
+						"description": "Validation Error"
 					}
 				},
 				"tags": [
@@ -220,6 +224,9 @@
 					},
 					"404": {
 						"description": "Not found"
+					},
+					"422": {
+						"description": "Validation Error"
 					}
 				},
 				"tags": [
